@@ -1,5 +1,9 @@
 2004-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/*.cc: use robust_scm2moment() where appropriate.
+
+	* lily/tuplet-engraver.cc (try_music): 
+
 	* lily/moment.cc (robust_scm2moment): new function.
 
 	* scm/titling.scm (default-score-title): remove caps for piece.
